--- a/style.css
+++ b/style.css
@@ -1,23 +1,17 @@
 body {
-  margin: 0;
-  padding: 0;
-}
-
-.piano {
-  display: flex;
-  justify-content: center;
-  background-color: cornflowerblue;
+	margin: 0;
+	padding: 0;
+	display: flex;
 }
 
 .piano-button {
-  width: 200px;
-  height: 800px;
-  border: 5px solid black;
-  border-radius: 10px;
-  margin: 20px;
-  background-color: white;
+	width: 200px;
+	height: 800px;
+	border: 5px solid black;
+	border-radius: 10px;
+	margin: 20px;
 }
 
-.piano-button.active {
-  background-color: red;
+.active {
+	background-color: red;
 }
